package org.design.simplestrategy.strategy;

import org.design.simplestrategy.model.Product;

public interface AddToCartStrategy {

    public void addToCart(final Product product);

}
